# classer

./: README.md
docs/: ASSISTANT.md  api.md  architecture.md  authentication.mdx  deployment.md  github-readme.md  introduction.mdx  mint.json  pricing.mdx  quickstart.mdx  setup.md  transactional-emails.txt
docs/api-reference/: batch.mdx  classify.mdx  generate.mdx  match.mdx  overview.mdx  score.mdx  tag.mdx
docs/sdks/: python.mdx  typescript.mdx
python/: .gitignore  README.md  pyproject.toml  sst.pyi
python/src/classer/: __init__.py  client.py  exceptions.py  types.py
python/tests/: test_client.py
typescript/: README.md  classer-ai-0.0.1.tgz  package-lock.json  package.json  tsconfig.json
typescript/src/: index.test.ts  index.ts  integration.test.ts
